--- a/pom.xml
+++ b/pom.xml
@@ -98,13 +98,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://54.175.199.103:8181/mylandmarktech/repository/tesla-releases/</url>
+	      <url><http://3.84.6.15:8181/mylandmarktech/repository/tesla-releases//url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://http://54.175.199.103:8181/mylandmarktech/repository/tesla-snapshots/</url>
+	      <url>http://3.84.6.15:8181/mylandmarktech/repository/tesla-snapshots/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
